--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@
 
 /*******NAVBAR********/
 .navbar{
-  height: 4rem;
+  height: 64px;
 
 }
 .navbar-brand img{
     width: 15rem;
     height: 10vh;
-}
+} 
 
 .nav-link{
     transition: color 0.7s;
