--- a/style.css
+++ b/style.css
@@ -1,90 +1,112 @@
-
-:root{
-    --red:#dc3545;
+:root {
+  --red: #dc3545;
 }
 
 /*******NAVBAR********/
-.navbar{
+.navbar {
   height: 100px;
- z-index: 1;
+  z-index: 1;
 }
 /* .navbar:visited{
   height: 20rem;
   
 } */
-.navbar-brand img{
-    width: 9rem;
-    /* height: 100%; */
-    /* border: #dc3545 2px solid; */
-} 
+.navbar-brand img {
+  width: 9rem;
+  /* height: 100%; */
+  /* border: #dc3545 2px solid; */
+}
 
-.nav-link{
-    transition: color 0.7s;
-   
+.nav-link {
+  transition: color 0.7s;
 }
 
 .nav-link.active:hover {
-    color: var(--red) !important;
-  }
-  
-  .nav-link:hover {
-    color: var(--red);
-  }
+  color: var(--red) !important;
+}
 
-  /* ********************CAROUSEL****************/
+.nav-link:hover {
+  color: var(--red);
+}
 
-  .carousel-item {
-    max-height: calc(100vh - 100px);
-   z-index: 0;
-  }
+/* ********************CAROUSEL****************/
 
-  .carousel-indicators button {
-    background-color: rgb(226, 241, 197) !important ;
-    padding: 0.1rem !important;
-    width: 3rem !important;
-    /* margin-right: 1rem !important; */
-  }
+.carousel-item {
+  max-height: calc(100vh - 100px);
+  z-index: 0;
+}
 
-  /* *****************ABOUT *******************/
-  /* *****************Actor *******************/
+.carousel-indicators button {
+  background-color: rgb(226, 241, 197) !important ;
+  padding: 0.1rem !important;
+  width: 3rem !important;
+  /* margin-right: 1rem !important; */
+}
 
-  #actor img{
-    height: 15rem;
-  }
+/* *****************ABOUT *******************/
+/* *****************Actor *******************/
 
-  #actor .card {
-    transition: transform 0.3s;
-  }
-  
-  #actor .card:hover {
-    transform: scale(1.03);
-  }
-  /* *****************Contact*******************/
+#actor img {
+  height: 15rem;
+}
 
-  .btn{
-    /* display: block;
+#actor .card {
+  transition: transform 0.3s;
+}
+
+#actor .card:hover {
+  transform: scale(1.03);
+}
+/* *****************Contact*******************/
+
+.btn {
+  /* display: block;
     width: 10%;
     height: 1rem;
     padding: 1rem; */
-  }
-  
-  .map-responsive{
-    overflow:hidden;
-    padding-bottom:50%;
-    position:relative;
-    height:0;
-}
-.map-responsive iframe{
-    left:0;
-    top:0;
-    height:90%;
-    width:100%;
-    position:absolute;
 }
 
+.map-responsive {
+  overflow: hidden;
+  padding-bottom: 50%;
+  position: relative;
+  height: 0;
+}
+.map-responsive iframe {
+  left: 0;
+  top: 0;
+  height: 90%;
+  width: 100%;
+  position: absolute;
+}
 
 /**************footer***************/
-.list-inline-item:hover{
-    color: var(--red);
+.list-inline-item:hover {
+  color: var(--red);
+}
 
+/** -------------- UP-BUTTON ------------------ */
+.btn-up {
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  color: white;
+  background-color: var(--red);
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.3rem;
+  text-decoration: none;
+}
+
+.btn-up:hover {
+  color: black;
+}
+
+.btn-up:hover i {
+  transform: scale(1.2);
+  font-size: 1.4rem;
 }
